# stockex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  cmake-single-platform.yml
bench/: CMakeLists.txt  bench_utils.hpp  benchmark_fragmentation.cpp  benchmark_sweep.cpp  latency_analyser.py  latency_distribution.py  market_simulation.cpp  matching_benchmark.cpp  order_book_bench.cpp  order_matching_bench.cpp  order_queue_bench.cpp  orderbook_benchmark.cpp  run_all_scenario.sh  simulation_event.hpp  simulation_generator.cpp
cmake/: Libuv.cmake  Testing.cmake
scripts/: latency_analyser.py  plot_latency.py  run_benchmarks.sh  visualize_results.py
src/: CMakeLists.txt  main.cpp
src/engine/: order_book.cpp  order_book.hpp
src/models/: basic_types.hpp  constants.hpp  order.hpp  order_queue.hpp  price_level.hpp  request.hpp  responses.hpp
src/utils/: memory_pool.hpp  utils.hpp
tests/: CMakeLists.txt  order_book_test.cpp  order_queue_test.cpp
